# alivePlayer

./: CMakeLists.txt  README.md
src/: main  main.cpp
src/study/5-11/: build.sh  extra_audio.c  out.aac
src/study/5-15/: build.sh  extra_video.c
src/study/5-16/: build.sh  remux.c
src/study/5-19/: build.sh  cut.c
src/study/5-2/: build.sh  ffmpeg_log  ffmpeg_log.c
src/study/5-8/: build.sh  mediainfo.c
